--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/style.css">
+    <script src="js/functions.js"></script>
 </head>
 <body>
     <h1>Heitä noppaa</h1>
     <img src="images/6.png" name="noppa">
+    <input onclick="heitto();" type=button value="Heitä noppaa">
     
 </body>
 </html>
